Don't use find_entity() for reconnecting circuit wires when the target didn't get rebuilt

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.1
+Date: 5. 4. 2018
+  Bugfixes:
+    - Don't use find_entity() for reconnecting circuit wires when the target didn't get rebuilt
+---------------------------------------------------------------------------------------------------
 Version: 0.16.0
 Date: 4. 4. 2018
   Info:
