--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.3
+Date: 3. 5. 2018
+  Info:
+    - Added German translation courtesy of ST-DDT on GitHub
+    - Updated tool icon to be more distinctive in the inventory, with a yellow tinted blueprint background
+---------------------------------------------------------------------------------------------------
 Version: 0.16.2
 Date: 5. 4. 2018
   Bugfixes:
