Quick 0.17 update - still needs a 64x64 icon once the medium pole icon gets updated

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.0
+Date: 26. 2. 2019
+  Changes:
+    - Updated for 0.17
+---------------------------------------------------------------------------------------------------
 Version: 0.16.5
 Date: 29. 12. 2018
   Changes:
