--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.2
+Date: 26. 2. 2019
+  Changes:
+    - Fix mod portal thumbnail
+---------------------------------------------------------------------------------------------------
 Version: 0.17.0
 Date: 26. 2. 2019
   Changes:
