--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,16 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.3
+Date: 13. 04. 2019
+  Changes:
+    - Move to a cursor-only tool item that can be grabbed from the shortcut bar or the blueprint library
+---------------------------------------------------------------------------------------------------
 Version: 0.17.2
-Date: 26. 2. 2019
+Date: 26. 02. 2019
   Changes:
     - Fix mod portal thumbnail
 ---------------------------------------------------------------------------------------------------
 Version: 0.17.0
-Date: 26. 2. 2019
+Date: 26. 02. 2019
   Changes:
     - Updated for 0.17
 ---------------------------------------------------------------------------------------------------
@@ -15,27 +20,27 @@ Date: 29. 12. 2018
     - Added shift-selection mode that will only connect to poles directly north/south/east/west of selected poles
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.4
-Date: 2. 6. 2018
+Date: 02. 06. 2018
   Changes:
     - Poles are reconstructed in the same order as before but sorted by shortest wire reach first, to create clean grids more reliably with mixed pole types
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.3
-Date: 3. 5. 2018
+Date: 03. 05. 2018
   Info:
     - Added German translation courtesy of ST-DDT on GitHub
     - Updated tool icon to be more distinctive in the inventory, with a yellow tinted blueprint background
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.2
-Date: 5. 4. 2018
+Date: 05. 04. 2018
   Bugfixes:
     - Track reconnection targets that get destroyed by unit number instead of using find_entity()
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.1
-Date: 5. 4. 2018
+Date: 05. 04. 2018
   Bugfixes:
     - Don't use find_entity() for reconnecting circuit wires when the target didn't get rebuilt
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.0
-Date: 4. 4. 2018
+Date: 04. 04. 2018
   Info:
     - Initial release
