--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.0
+Date: 29. 01. 2020
+  Changes:
+    - Update for 0.18
+---------------------------------------------------------------------------------------------------
 Version: 0.17.3
 Date: 13. 04. 2019
   Changes:
