Updated for compatibility with Realistic Electric Trains thanks to robot256

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.1
+Date: 22. 03. 2020
+  Changes:
+    - Updated for compatibility with Realistic Electric Trains thanks to robot256
+---------------------------------------------------------------------------------------------------
 Version: 0.18.0
 Date: 29. 01. 2020
   Changes:
