--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 13. 12. 2020
+  Changes:
+    - Update for 1.1
+---------------------------------------------------------------------------------------------------
 Version: 0.18.1
 Date: 22. 03. 2020
   Changes:
