--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.0
+Date: 1. 11. 2024
+  Changes:
+    - Update for 2.0 @AckEmma
+    - normal select mode has been removed
+    - alt-select mode (straight line) is now the default
+  Optimizations:
+    - Improved performance of the tool - thanks @CodeGreen
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 13. 12. 2020
   Changes:
