--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,17 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.0
+Date: 20. 11. 2024
+  Features:
+    - Will no longer connect two electric grids that were previously not connected
+    - Selection will now prioritize horizontal and vertical connections, where this is not possible the smallest possible connection will be made
+  Changes:
+    - Update to Factorio 2.0 API
+  Optimizations:
+    - Selection tool will now only select electric poles
+    - Improved algorithm for horiztonal and vertical matches
+  Info:
+    - Updated by @AckEmma, Optimizations by @CodeGreen
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 13. 12. 2020
   Changes:
