fix: Update Re-Connection Logic
Fixes that power poles with large connection distances sometimes would
not get reconnected as they would attempt to connect to poles that
didn't have a big enough connection distance to reach them.

This primarily affects big power poles or moded poles

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.1
+Date: 25. 02. 2025
+  Bugfixes:
+    - Fixed a bug where the tool would not connect poles that were previously connected
+---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 25. 02. 2025
   Features:
